--- a/panier.html
+++ b/panier.html
@@ -57,9 +57,18 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row">
-
-            </section>
+            <table class="table table-success">
+                <thead>
+                    <tr>
+                        <th scope="col">Article</th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Couleur</th>
+                        <th scope="col">Prix</th>
+                    </tr>
+                    <tbody id="cart">
+                    </tbody>
+                </thead>
+            </table>
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
@@ -86,5 +95,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="produit.js" async></script>
     </body>
 </html>
