--- a/produit.html
+++ b/produit.html
@@ -68,7 +68,7 @@
                         <option selected>Choix de la couleur</option>
                     </select>
                     <p id="price"></p>
-                    <a class="btn btn-success" role="button">Ajouter au panier</a>
+                    <a id="add_to_cart" class="btn btn-success" role="button">Ajouter au panier</a>
                     <a href="index.html" class="btn btn-success" role="button">Retour en arrière</a>
                 </div>
             </section>
